--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -9,16 +9,18 @@
 
     <RelativeLayout
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:paddingBottom="40dp"
+        android:paddingRight="40dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
             android:id="@+id/register_button"
             android:layout_width="50dp"
             android:layout_height="50dp"
-            android:background="@drawable/button_round"
-            android:src="@drawable/register_image"
             android:layout_alignParentEnd="true"
-            android:layout_alignParentBottom="true"/>
+            android:layout_alignParentBottom="true"
+            android:background="@drawable/button_round"
+            android:src="@drawable/image_button" />
     </RelativeLayout>
 
 
@@ -27,8 +29,7 @@
         android:layout_height="wrap_content"
         app:cardCornerRadius="10dp"
         app:cardElevation="5dp"
-        android:layout_margin="40dp"
-        >
+        android:layout_margin="40dp">
 
         <LinearLayout
             android:layout_width="match_parent"
