--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:paddingRight="40dp">
 
         <androidx.appcompat.widget.AppCompatImageButton
-            android:id="@+id/register_button"
+            android:id="@+id/btSignUp"
             android:layout_width="50dp"
             android:layout_height="50dp"
             android:layout_alignParentEnd="true"
@@ -66,7 +66,7 @@
 
             <EditText
 
-                android:id="@+id/editText"
+                android:id="@+id/emailinput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -79,7 +79,7 @@
                 android:gravity="center"/>
 
             <EditText
-                android:id="@+id/editText2"
+                android:id="@+id/passwordinput"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
@@ -93,7 +93,7 @@
                 />
 
             <com.google.android.material.button.MaterialButton
-                android:id="@+id/button"
+                android:id="@+id/btSignIn"
                 android:gravity="center"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
