--- a/app/src/main/res/color/option_background.xml
+++ b/app/src/main/res/color/option_background.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:color="@color/option"
+    <item android:color="@color/Fuşya"
         android:state_enabled="true"
         android:state_selected="true"/>
     <item android:color="@color/colorAccent"/>
