--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -4,8 +4,13 @@
     <color name="colorPrimaryDark">#3700B3</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorSplash">#353E4F</color>
-    <color name="option">#33FF33</color>
-    <color name="answer">#FF4019</color>
+    <color name="Gri">#A0A0A0</color>
+    <color name="Mavi">#778899</color>
+    <color name="AçıkGri">#708090</color>
+    <color name="Mor">#E6E6FA</color>
+    <color name="Toprak">#CD853F</color>
+    <color name="KoyuGri">#696969</color>
+    <color name="Fuşya">#ec3b83</color>
 
 
 </resources>
