--- a/app/src/main/res/values/register_image_background.xml
+++ b/app/src/main/res/values/register_image_background.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="register_image_background">#B329DC</color>
+    <color name="register_image_background">#3DDC84</color>
 </resources>
