--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,7 @@
     <color name="Toprak">#CD853F</color>
     <color name="KoyuGri">#696969</color>
     <color name="Fuşya">#ec3b83</color>
+    <color name="Siyah">#000000</color>
 
 
 </resources>
