--- a/app/src/main/res/layout/activity_quiz.xml
+++ b/app/src/main/res/layout/activity_quiz.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/AçıkGri">
+    android:layout_height="match_parent">
 
     <com.google.android.material.card.MaterialCardView
         android:id="@+id/materialCardView"
@@ -23,16 +22,15 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:background="@color/AçıkGri">
+            android:layout_height="match_parent">
 
             <TextView
                 android:id="@+id/question"
                 android:layout_width="match_parent"
                 android:layout_height="92dp"
                 android:gravity="center"
-                android:textColor="@color/colorPrimary"
-                android:textSize="15dp"
+                android:textColor="@android:color/black"
+                android:textSize="20dp"
                 android:textStyle="italic"
                 tools:text="Question" />
 
